--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@ngx-translate/http-loader": "^16.0.0",
     "@types/node-red": "^0.20.7",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.7",
     "compression": "^1.7.4",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "flexsearch": "^0.7.43",
     "handlebars": "^4.7.8",
+    "ng2-charts": "^8.0.0",
     "ngx-toastr": "^19.0.0",
     "node-red": "^3.1.9",
     "open": "^8.4.2",
