--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^19.1.1",
     "@angular/animations": "^19.1.1",
     "@angular/common": "^19.1.1",
     "@angular/compiler": "^19.1.1",
@@ -22,6 +23,8 @@
     "@angular/platform-browser-dynamic": "^19.1.1",
     "@angular/router": "^19.1.1",
     "@cds/core": "^6.11.0",
+    "@clr/angular": "^17.5.0",
+    "@clr/ui": "^17.5.0",
     "@ngx-translate/core": "^16.0.3",
     "@ngx-translate/http-loader": "^16.0.0",
     "@types/node-red": "^0.20.7",
@@ -32,6 +35,7 @@
     "express-session": "^1.18.0",
     "flexsearch": "^0.7.43",
     "handlebars": "^4.7.8",
+    "ng2-charts": "^8.0.0",
     "ngx-toastr": "^19.0.0",
     "node-red": "^3.1.9",
     "open": "^8.4.2",
@@ -39,9 +43,7 @@
     "rxjs": "~7.8.0",
     "session-file-store": "^1.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0",
-    "@clr/angular": "^17.5.0",
-    "@clr/ui": "^17.5.0"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.1",
