--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,3 +12,5 @@ jobs:
               run: npm install
             - name: Build
               run: npm run build
+            - name: Publish Linux
+              run: npm run publish-linux
