--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,54 @@ jobs:
               uses: actions/setup-node@v1
               with:
                   node-version: '20.11.1'
-            - name: Install dependencies
-              run: npm install
+
+
+            - name: Cache node modules
+              id: cache-nodemodules
+              uses: actions/cache@v2
+              env:
+                cache-name: cache-node-modules
+              with:
+                # caching node_modules
+                path: node_modules
+                key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+                restore-keys: |
+                  ${{ runner.os }}-build-${{ env.cache-name }}-
+                  ${{ runner.os }}-build-
+                  ${{ runner.os }}-
+            - name: Install Dependencies
+              if: steps.cache-nodemodules.outputs.cache-hit != 'true'
+              run: npm ci
+
             - name: Build
               run: npm run build
+            - uses: actions/cache@v2
+              with:
+                path: |
+                  /home/runner/.nexe
+                key: ${{ runner.os }}-nexe-prebuilt-${{ hashFiles('**/package.json') }}
+                restore-keys: |
+                  ${{ runner.os }}-nexe-prebuilt-
             - name: Publish Linux
               run: npm run publish-linux
+
+            - name: release
+              uses: actions/create-release@v1
+              id: create_release
+              with:
+                draft: false
+                prerelease: false
+                release_name: Release ${{ github.ref }}
+                tag_name: ${{ github.ref }}
+                body_path: CHANGELOG.md
+              env:
+                GITHUB_TOKEN: ${{ github.token }}
+            - name: upload linux artifact
+              uses: actions/upload-release-asset@v1
+              env:
+                GITHUB_TOKEN: ${{ github.token }}
+              with:
+                upload_url: ${{ steps.create_release.outputs.upload_url }}
+                asset_path: published/kontoras3_bin
+                asset_name: kontoras3_bin
+                asset_content_type: application/gzip
