docker file and publish-linux2

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,11 @@
-on: push
+on:
+  push:
+    # Sequence of patterns matched against refs/tags
+    tags:
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+
+name: Create Release
+
 jobs:
     build-node:
         runs-on: ubuntu-latest
@@ -37,7 +44,7 @@ jobs:
                 restore-keys: |
                   ${{ runner.os }}-nexe-prebuilt-
             - name: Publish Linux
-              run: npm run publish-linux
+              run: npm run publish-linux2
 
             - name: release
               uses: actions/create-release@v1
