bun broken compile with flexsearch

--- a/package.json
+++ b/package.json
@@ -30,15 +30,19 @@
     "@ngx-translate/core": "^16.0.3",
     "@ngx-translate/http-loader": "^16.0.0",
     "@types/node-red": "^0.20.7",
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
+    "bun": "^1.1.45",
     "chart.js": "^4.4.7",
     "compression": "^1.7.4",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "flexsearch": "^0.7.43",
     "handlebars": "^4.7.8",
+    "mock-aws-s3": "^4.0.2",
     "ng2-charts": "^8.0.0",
     "ngx-toastr": "^19.0.0",
+    "nock": "^13.5.6",
     "node-red": "^3.1.9",
     "open": "^8.4.2",
     "remult": "^2.7.28",
