--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,10 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "paths": {
+      "flexsearch": ["./node_modules/flexsearch/dist/flexsearch.bundle.debug.js"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
