--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,5 +58,5 @@ jobs:
               with:
                 upload_url: ${{ steps.create_release.outputs.upload_url }}
                 asset_path: release.zip
-                asset_name: schuetze-${{ github.ref }}.zip
+                asset_name: schuetze.zip
                 asset_content_type: application/gzip
